0.9 - Unreleased
----------------

0.8 - 2010-03-10
----------------

* Make the init command follow along if the svn repository has been switched
  to another branch. Thanks to Calvin Hendryx-Parker for reporting the issue.
  [tomster]

0.7 - 2010-03-07
----------------

* Use full copies instead of symlinks to create working copies. This avoids
  the issue of having the git and svn repository out of sync when working
  with multiple copies of the same repository and greatly reduces the risk of
  conflicts.

  This also means, that the fetch command now only operates on the cache 
  without modifying the working copy (making it safe to run via crontab,
  for example)

  Running gitify against an old-style working copy will produce an error.
  Simply deleting the symlink and re-running gitify remedies that, however.

  Another effect, is that the init command is now only needed once for each
  working copy (it is no longer necessary to re-run the command after
  switching between different working copies of the same repository).
  
  gitify therefore no longer defaults to the init command (just as neither
  git nor svn do anything w/o supplying an explicit action). Also, it has been
  renamed from ``gitify`` (back) to ``init``.
  [tomster]

* Allow the ``help``, ``--version`` and ``fetch`` commands to run outside .svn directories
  [tomster]

0.6 - 2010-03-07
----------------

* add a file manifest so that all necessary files will get included for sdist
  [proyvind]

* sample update hook for enforcing dcommits to help keeping the svn and git 
  repositories in sync
  [chaoflow]

* updated tests to work with git 1.6.x
  [tomster]

* removed deprecated entry points for clone, fetch and commit
  [tomster]

0.5 - 2009-08-15 (a.k.a. HAR2009 release)
-----------------------------------------

* Added ``gitify update`` command, which performs a git-svn rebase operation
  for the current svn checkout but also handles uncommitted local changes